# affiliate-chrome-extension

./: .editorconfig  .gitignore  .prettierrc  .releaserc  README.md  devtools.html  newtab.html  options.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
config/: release-rules.cjs
docs/: API.md  CHANGELOG.md  RELEASE_RULES.md  SCHEMA.md
inject/: interceptor.js  styles.css
mock-api/: README.md  pyproject.toml
mock-api/api/: __init__.py  mock_data.py  schemas.py
src/: manifest.ts
src/background/: index.ts
src/config/: constants.ts
src/content/: index.ts
src/contentScript/: index.ts
src/devtools/: DevTools.tsx  index.tsx
src/hooks/: useCrawler.ts  useOptions.ts
src/newtab/: NewTab.scss  NewTab.tsx
src/options/: Options.css  Options.scss  Options.tsx
src/popup/: Popup.css  Popup.scss  Popup.tsx
src/services/: crawler.service.ts  messaging.service.ts  storage.service.ts
src/sidepanel/: SidePanel.css  SidePanel.scss  SidePanel.tsx
src/types/: constants.ts  enums.ts  exceptions.ts  index.ts
src/utils/: alert.ts  checks.ts  formatters.ts  helpers.ts  injector.ts  logger.ts  swal.ts  validators.ts
templates/: devtools.html  newtab.html  options.html  popup.html  sidepanel.html
