[tool.poetry]
name = "mock-api"
version = "0.1.0"
description = ""
authors = ["Hiep Tran <ext.hiep.tran@truedigital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.114.2"
uvicorn =  {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.2"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
